samples/_failures_safe/1761252057_095036_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9443f68b.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_9443f68b.c:156:15: error: expected ‘)’ at end of input
  156 |     if (parser
      |        ~      ^
      |               )
./samples/SAFE/__tmp_9443f68b.c:156:5: error: expected declaration or statement at end of input
  156 |     if (parser
      |     ^~
